--- a/tabela.html
+++ b/tabela.html
@@ -77,6 +77,151 @@
 
     <hr> <hr>
 
+    <style>
+        th{
+            background-color: rgb(186, 186, 248);
+        }
+
+        #p1, #p2, #p3, #p4, #p5, #LE, #LD{
+            background-color: azure;
+        }
+
+        th{
+            padding: 10px;
+            width: 100px;
+            text-align: center;
+        }
+
+
+        #p1{
+            width: 900px;
+            padding: 8px;
+            text-align: center;
+
+        }
+
+        #p3{
+            width: 700px;
+            padding: 8px;
+            text-align: center;
+        }
+
+        #b{
+            background-color: yellow;
+        }
+
+        #ma{
+            background-color: red;
+        }
+
+        #p{
+            background-color: rgb(23, 90, 23);
+        }
+        #me{
+            background-color: rgb(231, 128, 55);
+        }
+        #mam{
+            background-color: rgb(241, 211, 173);
+        }
+
+        
+
+
+    </style>
+
+
+    <h1 style="text-align: center;">Lista de frutas</h1>
+
+    <table border="5" align="center" width="900px">
+        <thead>
+            <tr>
+                <th id="p1">........</th>
+                <th>FRUTA 1</th>
+                <th>FRUTA 2</th>
+                <th>FRUTA 3</th>
+                <th>FRUTA 4</th>
+                <th>FRUTA 5</th>
+                <th>FRUTA 6</th>
+                <th id="p2">........</th>
+                <th id="p3">........</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            <tr>
+                <td id="LE" rowspan="8">LINHAS ESQUERDA</td>
+                <td>LINHA 1</td>
+                <td id="ma">MAÇÃ</td>
+                <td id="p">PERA</td>
+                <td id="b">BANANA</td>
+                <td id="me">MELÃO</td>
+                <td id="mam">MAMÃO</td>
+                <td>LINHA1</td>
+                <td id="LD" rowspan="50">LINHAS DIREITAS</td>
+            </tr>
+
+            <tr>
+                <td>LINHA 2</td>
+                <td id="p">PERA</td>
+                <td id="ma">MAÇÃ</td>
+                <td id="b">BANANA</td>
+                <td id="mam">MAMÃO</td>
+                <td id="me">MELÃO</td>
+                <td>LINHA 2</td>
+            </tr>
+
+            <tr>
+                <td>LINHA 3</td>
+                <td id="me">MELÃO</td>
+                <td id="p">PERA</td>
+                <td id="mam">MAMÃO</td>
+                <td id="b">BANANA</td>
+                <td id="ma">MAÇÃ</td>
+                <td>LINHA 3</td>
+            </tr>
+
+            <tr>
+                <td>LINHA 4</td>
+                <td id="b">BANANA</td>
+                <td id="mam">MAMÃO</td>
+                <td id="p">PERA</td>
+                <td id="me">MELÃO</td>
+                <td id="ma">MAÇÃ</td>
+                <td>LINHA 4</td>
+            </tr>
+
+
+            <tr>
+                <td>LINHA 5</td>
+                <td id="p">PERA</td>
+                <td id="ma">MAÇÃ</td>
+                <td id="mam">MAMÃO</td>
+                <td id="me">MELÃO</td>
+                <td id="b">BANANA</td>
+                <td>LINHA 5</td>
+            </tr>
+
+            <tr>
+                <th id="p4">........</th>
+                <td>FRUTA 1</td>
+                <td>FRUTA 2</td>
+                <td>FRUTA 3</td>
+                <td>FRUTA 4</td>
+                <td>FRUTA 5</td>
+                <td id="p5">........</td>
+            </tr>
+
+
+
+        </tbody>
+
+
+
+
+
+    </table>
+
 
 
 
